# tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittely.md  testaus.md  toteutus.md
pakatut/: pakkaus  pakkaus.lzw
src/: huffman.py  jono.py  lempelziv.py  puu.py  tiedostopakkaus.py  vertailu.py
src/tests/: huffman_test.py  lempel-ziv_test.py  tiedostopakkaus_test.py
testitiedostot/: aaa.txt  abc.txt  abc.txt_purettu  bbb.txt  etikka  finnlex.txt  kissa.txt  testi.txt  tli.txt  tuksu.txt
testitiedostot/vertailu1/: lex1.txt  lex2.txt  lex3.txt  lex4.txt  lex5.txt
viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
