[tool.poetry]
name = "tiedostopakkaus-testi"
version = "0.1.0"
description = ""
authors = ["Peruna <noora.matilainen@helsinki.fi>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
invoke = "^1.6.0"
numpy = "^1.21.4"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = "^6.1.1"
pylint = "^2.11.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
